--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <script src="deps/FileSaver.min.js"></script>
     <script src="deps/tileset.js"></script>
     <script src="deps/input.js"></script>
+    <script src="ai.js"></script>
     <script src="sketch.js"></script>
+    <script src="piece.js"></script>
   </head>
   <body>
   </body>
